--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -3,7 +3,7 @@ import Logo from "./logo.astro";
 ---
 <header 
     id="landing-header"
-    class="py-4 px-10 flex items-center fixed top-0 w-full justify-between z-40  text-white"> 
+    class="py-4 px-10 flex items-center fixed top-0 w-full justify-between z-40"> 
     
     <div class="flex flex-grow basis-0">
         <Logo />
