change the initial color of the header bug (before was black)

--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -60,7 +60,7 @@ import Logo from "./logo.astro";
 
     const observer = new IntersectionObserver(entries => {
         entries.forEach((entry) => {
-            const isIntersecting = entry
+            const {isIntersecting} = entry
             if(isIntersecting) {
                 const color = entry.target.getAttribute('data-header-color');
                 header.style.color = color;
